// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserArtistMap renders corectly when range is invalid 1`] = `
<UserArtistMap
  apiUrl="barfoo"
  range="invalid_range"
  user={
    Object {
      "name": "foobar",
    }
  }
>
  <ForwardRef
    style={
      Object {
        "marginTop": 20,
        "minHeight": 600,
      }
    }
  >
    <div
      style={
        Object {
          "background": "#FFFFFF",
          "border": "1px solid #EEEEEE",
          "borderRadius": "8px",
          "boxShadow": "0 1px 1px rgba(192,192,192,0.1), 0 2px 2px rgba(192,192,192,0.15), 0 4px 4px rgba(192,192,192,0.20)",
          "boxSizing": "border-box",
          "height": "100%",
          "marginTop": 20,
          "minHeight": 600,
        }
      }
    >
      <div
        className="row"
      >
        <div
          className="col-xs-10"
        >
          <h3
            className="capitalize-bold"
            style={
              Object {
                "marginLeft": 20,
              }
            }
          >
            Artist Origins
          </h3>
        </div>
        <div
          className="col-xs-2 text-right"
        >
          <h3>
            <a
              href="#artist-origin"
            >
              <FontAwesomeIcon
                border={false}
                className=""
                color="#000000"
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      448,
                      512,
                      Array [],
                      "f1e0",
                      "M352 320c-22.608 0-43.387 7.819-59.79 20.895l-102.486-64.054a96.551 96.551 0 0 0 0-41.683l102.486-64.054C308.613 184.181 329.392 192 352 192c53.019 0 96-42.981 96-96S405.019 0 352 0s-96 42.981-96 96c0 7.158.79 14.13 2.276 20.841L155.79 180.895C139.387 167.819 118.608 160 96 160c-53.019 0-96 42.981-96 96s42.981 96 96 96c22.608 0 43.387-7.819 59.79-20.895l102.486 64.054A96.301 96.301 0 0 0 256 416c0 53.019 42.981 96 96 96s96-42.981 96-96-42.981-96-96-96z",
                    ],
                    "iconName": "share-alt",
                    "prefix": "fas",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size="sm"
                spin={false}
                style={
                  Object {
                    "marginRight": 20,
                  }
                }
                swapOpacity={false}
                symbol={false}
                title=""
                transform={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-share-alt fa-w-14 fa-sm "
                  color="#000000"
                  data-icon="share-alt"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={
                    Object {
                      "marginRight": 20,
                    }
                  }
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M352 320c-22.608 0-43.387 7.819-59.79 20.895l-102.486-64.054a96.551 96.551 0 0 0 0-41.683l102.486-64.054C308.613 184.181 329.392 192 352 192c53.019 0 96-42.981 96-96S405.019 0 352 0s-96 42.981-96 96c0 7.158.79 14.13 2.276 20.841L155.79 180.895C139.387 167.819 118.608 160 96 160c-53.019 0-96 42.981-96 96s42.981 96 96 96c22.608 0 43.387-7.819 59.79-20.895l102.486 64.054A96.301 96.301 0 0 0 256 416c0 53.019 42.981 96 96 96s96-42.981 96-96-42.981-96-96-96z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
            </a>
          </h3>
        </div>
      </div>
      <Loader
        isLoading={false}
      >
        <div
          className="flex-center"
          style={
            Object {
              "minHeight": "inherit",
            }
          }
        >
          <span
            className="text-center"
            style={
              Object {
                "fontSize": 24,
              }
            }
          >
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f06a",
                    "M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z",
                  ],
                  "iconName": "exclamation-circle",
                  "prefix": "fas",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              swapOpacity={false}
              symbol={false}
              title=""
              transform={null}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-exclamation-circle fa-w-16 "
                data-icon="exclamation-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
             
            Invalid range: invalid_range
          </span>
        </div>
      </Loader>
    </div>
  </ForwardRef>
</UserArtistMap>
`;

exports[`UserArtistMap renders correctly 1`] = `
<ForwardRef
  style={
    Object {
      "marginTop": 20,
      "minHeight": 600,
    }
  }
>
  <div
    className="row"
  >
    <div
      className="col-xs-10"
    >
      <h3
        className="capitalize-bold"
        style={
          Object {
            "marginLeft": 20,
          }
        }
      >
        Artist Origins
      </h3>
    </div>
    <div
      className="col-xs-2 text-right"
    >
      <h3>
        <a
          href="#artist-origin"
        >
          <FontAwesomeIcon
            border={false}
            className=""
            color="#000000"
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f1e0",
                  "M352 320c-22.608 0-43.387 7.819-59.79 20.895l-102.486-64.054a96.551 96.551 0 0 0 0-41.683l102.486-64.054C308.613 184.181 329.392 192 352 192c53.019 0 96-42.981 96-96S405.019 0 352 0s-96 42.981-96 96c0 7.158.79 14.13 2.276 20.841L155.79 180.895C139.387 167.819 118.608 160 96 160c-53.019 0-96 42.981-96 96s42.981 96 96 96c22.608 0 43.387-7.819 59.79-20.895l102.486 64.054A96.301 96.301 0 0 0 256 416c0 53.019 42.981 96 96 96s96-42.981 96-96-42.981-96-96-96z",
                ],
                "iconName": "share-alt",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size="sm"
            spin={false}
            style={
              Object {
                "marginRight": 20,
              }
            }
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        </a>
      </h3>
    </div>
  </div>
  <Loader
    isLoading={false}
  >
    <div
      className="row"
    >
      <div
        className="col-xs-12"
      >
        <CustomChoropleth
          data={
            Array [
              Object {
                "id": "USA",
                "value": 43,
              },
              Object {
                "id": "CAN",
                "value": 5,
              },
              Object {
                "id": "IND",
                "value": 7,
              },
              Object {
                "id": "DNK",
                "value": 1,
              },
              Object {
                "id": "GBR",
                "value": 20,
              },
              Object {
                "id": "ISR",
                "value": 1,
              },
              Object {
                "id": "AUS",
                "value": 4,
              },
              Object {
                "id": "FRA",
                "value": 3,
              },
              Object {
                "id": "SWE",
                "value": 4,
              },
              Object {
                "id": "DEU",
                "value": 3,
              },
              Object {
                "id": "PRT",
                "value": 1,
              },
              Object {
                "id": "IRL",
                "value": 2,
              },
              Object {
                "id": "ISL",
                "value": 1,
              },
              Object {
                "id": "NOR",
                "value": 2,
              },
              Object {
                "id": "ARG",
                "value": 1,
              },
              Object {
                "id": "PRI",
                "value": 1,
              },
              Object {
                "id": "ESP",
                "value": 1,
              },
            ]
          }
          width={1200}
        />
      </div>
    </div>
  </Loader>
</ForwardRef>
`;
